Use kuma-demo instad of counter-demo
Signed-off-by: ruromero <rromerom@redhat.com>

--- a/mesh/metrics/traffic-permissions.yaml
+++ b/mesh/metrics/traffic-permissions.yaml
@@ -11,13 +11,13 @@ spec:
     - match:
        kuma.io/service: dataplane-metrics
     - match:
-       kuma.io/service: \"prometheus-alertmanager_kong-mesh-metrics_svc_80\"
+       kuma.io/service: "prometheus-alertmanager_kong-mesh-metrics_svc_80"
     - match:
-       kuma.io/service: \"prometheus-kube-state-metrics_kong-mesh-metrics_svc_80\"
+       kuma.io/service: "prometheus-kube-state-metrics_kong-mesh-metrics_svc_80"
     - match:
-       kuma.io/service: \"prometheus-kube-state-metrics_kong-mesh-metrics_svc_81\"
+       kuma.io/service: "prometheus-kube-state-metrics_kong-mesh-metrics_svc_81"
     - match:
-       kuma.io/service: \"prometheus-pushgateway_kong-mesh-metrics_svc_9091\"
+       kuma.io/service: "prometheus-pushgateway_kong-mesh-metrics_svc_9091"
 ---
 apiVersion: kuma.io/v1alpha1
 kind: TrafficPermission
@@ -27,8 +27,7 @@ metadata:
 spec:
    sources:
    - match:
-      kuma.io/service: \"grafana_kong-mesh-metrics_svc_80\"
+      kuma.io/service: "grafana_kong-mesh-metrics_svc_80"
    destinations:
    - match:
-      kuma.io/service: \"prometheus-server_kong-mesh-metrics_svc_80\"
-      
+      kuma.io/service: "prometheus-server_kong-mesh-metrics_svc_80"
