Small doc fixes for Mesh Fix metrics image Simplify demo app deployment Fix Mesh configmap creation that was failing on Mac
Signed-off-by: ruromero <rromerom@redhat.com>

--- a/openshift-registry/kong-mesh-metrics.properties
+++ b/openshift-registry/kong-mesh-metrics.properties
@@ -1,5 +1,5 @@
 docker.io/prom/pushgateway:v1.4.2
 docker.io/prom/alertmanager:v0.23.0
 docker.io/prom/prometheus:v2.32.1
-jimmidyson/configmap-reload:v0.6.1 
+docker.io/jimmidyson/configmap-reload:v0.6.1 
 docker.io/prom/node-exporter:v1.3.1
