--- a/kic/simple-rate-limiting.yaml
+++ b/kic/simple-rate-limiting.yaml
@@ -1,3 +1,14 @@
+apiVersion: configuration.konghq.com/v1
+kind: KongPlugin
+metadata:
+  name: rate-free-tier
+  namespace: kuma-demo
+config: 
+  minute: 10
+  policy: local
+  limit_by: ip
+plugin: rate-limiting
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
