Updated demo steps Added KongConsumer namespace Added check proxy
Signed-off-by: ruromero <rromerom@redhat.com>

--- a/kic/complex-rate-limiting.yaml
+++ b/kic/complex-rate-limiting.yaml
@@ -9,6 +9,7 @@ apiVersion: configuration.konghq.com/v1
 kind: KongConsumer
 metadata:
   name: user1
+  namespace: kuma-demo
   annotations:
     kubernetes.io/ingress.class: kong
 username: user1
